# concert-archive

./: .dockerignore  .env.example  .gitpod.Dockerfile  .tool-versions  Dockerfile  Dockerfile.testing  README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/concert_backend/: __init__.py  application.py
backend/concert_backend/routers/: auth.py  frontend.py  invites.py  stage.py  stages.py
backend/concert_backend/util/: b2.py
backend/concert_backend/util/auth/: __init__.py  providers.py  tokens.py
backend/prisma/: partial_types.py  schema.prisma
backend/src/: __init__.py  application.py
backend/src/routers/: __init__.py  auth.py  invites.py  stage.py  stages.py
backend/src/util/auth/: __init__.py  tokens.py
backend/src/util/livekit/: client.py  colors.py  token.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
frontend/src/: app.html  app.postcss
frontend/src/lib/components/: LoadingSpinner.svelte  Navbar.svelte  Participant.svelte  StageItem.svelte
frontend/src/lib/stores/: stage.ts  stages.ts  toasts.ts  token.ts
frontend/src/lib/util/: fetch.ts  types.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/auth/: +page.svelte
frontend/src/routes/new/: +page.svelte  +page.ts
frontend/src/routes/stages/[id]/: +page.svelte  +page.ts
